[TASK] New styles API

--- a/Resources/Private/Templates/Uploader/List.html
+++ b/Resources/Private/Templates/Uploader/List.html
@@ -4,7 +4,7 @@
 
 <f:section name="Content">
 
-	<table id="typo3-extension-list" class="typo3-extension-list">
+	<table id="typo3-extension-list" class="t3-table typo3-extension-list">
 		<thead>
 		<tr>
 			<th><f:translate key="list.header.extensionAction"/></th>
